--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "php": "^8.3",
-    "laravel/framework": "^11.0",
+    "laravel/framework": "^11.0|^12.0",
     "phpcfdi/sat-estado-cfdi": "^2.0",
     "phpcfdi/cfdi-expresiones": "^v3.3.0",
     "guzzlehttp/guzzle": "^7.9",
